--- a/styles/prosilver/template/days/abbrev_moon_lg_top.html
+++ b/styles/prosilver/template/days/abbrev_moon_lg_top.html
@@ -1,7 +1,7 @@
 {%- extends '@marttiphpbb_calendarinlineview/base.html' -%}
 
-{%- block day_info_class %} day-info-mid{%- endblock -%}
+{%- block day_info_class %} day-info-large{%- endblock -%}
 
 {%- block evrow_fill_class_top -%}
-    evrow-info-mid
+    evrow-info-large
 {%- endblock -%}
